[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/interface/room_data_container.gd" type="Script" id=1]
[ext_resource path="res://assets/user_interface/data/data_background.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/times_new_roman.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/user_interface/button/right_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/user_interface/button/left_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/user_interface/button/left_button_disabled.png" type="Texture" id=6]
[ext_resource path="res://assets/user_interface/button/right_button_disabled.png" type="Texture" id=7]
[ext_resource path="res://assets/user_interface/button/left_button_normal.png" type="Texture" id=8]
[ext_resource path="res://assets/user_interface/button/right_button_normal.png" type="Texture" id=9]
[ext_resource path="res://assets/user_interface/button/quit_button_pressed.png" type="Texture" id=10]
[ext_resource path="res://assets/user_interface/button/quit_button_normal.png" type="Texture" id=11]
[ext_resource path="res://assets/user_interface/button/quit_button_hover.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 7
font_data = ExtResource( 3 )

[node name="RoomDataContainer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -146.0
margin_top = 8.0
margin_right = 146.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "DESPESAS POR NOTA DE EMPENHO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -21.0
margin_right = 35.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="TextureButton" parent="PageContainer"]
margin_right = 16.0
margin_bottom = 16.0
disabled = true
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 5 )
texture_disabled = ExtResource( 6 )

[node name="PageNumber" type="Label" parent="PageContainer"]
margin_left = 20.0
margin_top = 2.0
margin_right = 50.0
margin_bottom = 14.0
rect_min_size = Vector2( 30, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="TextureButton" parent="PageContainer"]
margin_left = 54.0
margin_right = 70.0
margin_bottom = 16.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 7 )

[node name="DataContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -81.0
margin_right = 175.0
margin_bottom = 86.0
rect_min_size = Vector2( 350, 0 )
custom_constants/separation = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container1" type="VBoxContainer" parent="DataContainer"]
margin_right = 350.0
margin_bottom = 34.0
rect_min_size = Vector2( 340, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="DataContainer/Container1"]
margin_right = 350.0
margin_bottom = 8.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "aaaaaaaaa"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="VBoxContainer" parent="DataContainer/Container1"]
margin_top = 12.0
margin_right = 350.0
margin_bottom = 34.0

[node name="AmountCommitted" type="Label" parent="DataContainer/Container1/HeaderContainer"]
margin_right = 350.0
margin_bottom = 9.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Empenhado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountPaid" type="Label" parent="DataContainer/Container1/HeaderContainer"]
margin_top = 13.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Pago"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container2" type="VBoxContainer" parent="DataContainer"]
margin_top = 48.0
margin_right = 350.0
margin_bottom = 82.0
rect_min_size = Vector2( 340, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="DataContainer/Container2"]
margin_right = 350.0
margin_bottom = 8.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "aaaaaaaaa"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="VBoxContainer" parent="DataContainer/Container2"]
margin_top = 12.0
margin_right = 350.0
margin_bottom = 34.0

[node name="AmountCommitted" type="Label" parent="DataContainer/Container2/HeaderContainer"]
margin_right = 350.0
margin_bottom = 9.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Empenhado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountPaid" type="Label" parent="DataContainer/Container2/HeaderContainer"]
margin_top = 13.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Pago"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container3" type="VBoxContainer" parent="DataContainer"]
margin_top = 96.0
margin_right = 350.0
margin_bottom = 130.0
rect_min_size = Vector2( 340, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="DataContainer/Container3"]
margin_right = 350.0
margin_bottom = 8.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "aaaaaaaaa"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="VBoxContainer" parent="DataContainer/Container3"]
margin_top = 12.0
margin_right = 350.0
margin_bottom = 34.0

[node name="AmountCommitted" type="Label" parent="DataContainer/Container3/HeaderContainer"]
margin_right = 350.0
margin_bottom = 9.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Empenhado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountPaid" type="Label" parent="DataContainer/Container3/HeaderContainer"]
margin_top = 13.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Pago"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container4" type="VBoxContainer" parent="DataContainer"]
margin_top = 144.0
margin_right = 350.0
margin_bottom = 178.0
rect_min_size = Vector2( 340, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="DataContainer/Container4"]
margin_right = 350.0
margin_bottom = 8.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "aaaaaaaaa"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeaderContainer" type="VBoxContainer" parent="DataContainer/Container4"]
margin_top = 12.0
margin_right = 350.0
margin_bottom = 34.0

[node name="AmountCommitted" type="Label" parent="DataContainer/Container4/HeaderContainer"]
margin_right = 350.0
margin_bottom = 9.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Empenhado"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmountPaid" type="Label" parent="DataContainer/Container4/HeaderContainer"]
margin_top = 13.0
margin_right = 350.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Valor Pago"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -16.0
margin_bottom = -16.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="QuitButton" to="." method="on_quit_button_pressed"]
